templates/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kops-3-tier
#   labels:
#     app.kubernetes.io/name: ingress-nginx
#     app.kubernetes.io/part-of: ingress-nginx
